# Strava-MyFitnessPal-ETL

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
config/: settings.yml
