[tool.poetry]
name = "strava-myfitnesspal-etl"
version = "0.1.0"
description = "Purpose of this package is to get access to Strava activities data & MyFitnessPal calories intake data and reshape it to tabular data model so that it can be visualized in some BI tool (e.g. Tableau)"
authors = ["Michal Wolszczak <michal.wolszczakmw@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
